[project]
name = "deflake"
version = "0.1.0"
description = ""
authors = [
    {name = "Deniz Ariyan",email = "denizariyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
deflake = "deflake.cli:main"

[tool.poetry]
packages = [{include = "deflake", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
