[project]
name = "gflake"
version = "0.1.0"
description = ""
authors = [
    {name = "Deniz Ariyan",email = "contact@denizariyan.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0,<8.0.0",
    "pytest-cov>=2.0.0,<4.0.0",
]

[project.scripts]
gflake = "gflake.cli:main"

[tool.poetry]
packages = [{include = "gflake", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0,<8.0.0"
ruff = "^0.1.0"

[tool.ruff]
extend-select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
ignore = []

fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.format]
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
